<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>gsrs-spring-boot-autoconfigure</module>
        <module>gsrs-spring-boot-starter</module>
        <module>gsrs-core</module>
        <module>gsrs-spring-legacy-indexer</module>
        <module>gsrs-core-entities</module>
        <module>gsrs-core-test</module>
        <module>gsrs-spring-starter-tests</module>
        <module>gsrs-spring-legacy-structure-indexer</module>
        <module>gsrs-discovery</module>
        <module>gsrs-spring-legacy-sequence-indexer</module>
        <module>gsrs-spring-legacy-cache</module>
        <module>gsrs-spring-akka</module>
        <module>gsrs-scheduled-tasks</module>
        <module>gsrs-service-utilities</module>
        <module>gsrs-rest-api</module>
        <module>gsrs-controlled-vocabulary-api</module>
        <module>gsrs-controlled-vocabulary</module>
        <module>gsrs-data-exchange</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <properties>
        <java.version>17</java.version>
        <gsrs.version>3.3.0-SNAPSHOT</gsrs.version>
        <gsrs-services-common.version>1.2-SNAPSHOT</gsrs-services-common.version>
        <spring-boot.version>4.1.0</spring-boot.version>
        <log4j2.version>2.22.1</log4j2.version>
        <lombok.version>1.18.30</lombok.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <jackson.version>2.20.1</jackson.version>
        <jackson.annotations.version>3.1.6</jackson.annotations.version>
        <jackson.databind.version>3.1.6</jackson.databind.version>
        <jackson.core.version>3.1.6</jackson.core.version>
    </properties>
    <groupId>gov.nih.ncats</groupId>
    <artifactId>gsrs-spring-boot</artifactId>
    <version>3.3.0-SNAPSHOT</version>
    <name>gsrs-starter</name>
    <description>Spring Starter for GSRS project</description>
    <url>https://github.com/ncats/gsrs-spring-starter</url>
    <scm>
        <url>https://github.com/ncats/gsrs-spring-starter.git</url>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>gov.nih.ncats</groupId>
                <artifactId>gsrs-basic-service-utilities</artifactId>
                <version>${gsrs-services-common.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
    </dependencies>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>peryeata</id>
            <name>Tyler Peryea</name>
            <email>tyler.peryea@fda.hhs.gov</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>America/New_York</timezone>
        </developer>
        <developer>
            <id>katzelda</id>
            <name>Daniel Katzel</name>
            <email>daniel.katzel@nih.gov</email>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>America/New_York</timezone>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>central-repo1-maven2</id>
            <url>https://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central-snapshot</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <profiles>
        <profile>
            <id>release-signing</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok-maven-plugin</artifactId>
                        <version>1.18.20.0</version>
                        <executions>
                            <execution>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>delombok</goal>
                                </goals>
                                <configuration>
                                    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
                                    <outputDirectory>${project.build.directory}/generated-sources/delombok</outputDirectory>
                                    <addOutputDirectory>false</addOutputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>ossrh</publishingServerId>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <sourcepath>${project.build.directory}/generated-sources/delombok</sourcepath>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <keyname>${gpg.keyname}</keyname>
                                    <passphraseServerId>${gpg.keyname}</passphraseServerId>
                                    <gpgArguments>
                                        <arg>--batch</arg>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                        <arg>--no-tty</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
